--- a/Python Basics/Basics.ipynb
+++ b/Python Basics/Basics.ipynb
@@ -20,8 +20,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6bdc9bf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=20\n",
+    "b=10\n",
+    "print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87bf18d3",
    "metadata": {},
    "outputs": [],
    "source": []
