--- a/Python Basics/Operators.ipynb
+++ b/Python Basics/Operators.ipynb
@@ -23,6 +23,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2912bcbb",
+   "metadata": {},
+   "source": [
+    "ARITHMATIC OPERATORS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "0bc36308",
@@ -67,6 +75,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "06f81947",
+   "metadata": {},
+   "source": [
+    "COMPARISION OPERATORS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "b65139cf",
@@ -100,12 +116,97 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a62cab92",
+   "cell_type": "markdown",
+   "id": "75d17393",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "BITWISE OPERATORS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9df5e524",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary of t is: 0b11110\n",
+      "Binary of u is: 0b1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert to binary\n",
+    "a = bin(t)\n",
+    "b = bin(u)\n",
+    "\n",
+    "print(\"Binary of t is:\", a)\n",
+    "print(\"Binary of u is:\", b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "864f4b34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t & u = 0b1000\n",
+      "t | u = 0b11110\n",
+      "t ^ u = 0b10110\n",
+      "~t = -0b11111\n",
+      "t << 1 = 0b111100\n",
+      "t >> 1 = 0b1111\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"t & u =\", bin(t & u))    # Bitwise AND\n",
+    "print(\"t | u =\", bin(t | u))    # Bitwise OR\n",
+    "print(\"t ^ u =\", bin(t ^ u))    # Bitwise XOR\n",
+    "print(\"~t =\", bin(~t))          # Bitwise NOT of t\n",
+    "print(\"t << 1 =\", bin(t << 1))  # Left shift\n",
+    "print(\"t >> 1 =\", bin(t >> 1))  # Right shift"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa36451d",
+   "metadata": {},
+   "source": [
+    "LOGICAL OPERATORS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d9955f59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e > 20 and f < 15: True\n",
+      "e < 20 or f < 15: True\n",
+      "not (e == 27): False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logical operations\n",
+    "e=27\n",
+    "f=10\n",
+    "print(\"e > 20 and f < 15:\", e > 20 and f < 15)  # True and True → True\n",
+    "print(\"e < 20 or f < 15:\", e < 20 or f < 15)    # False or True → True\n",
+    "print(\"not (e == 27):\", not (e == 27))          # not True → False"
+   ]
   }
  ],
  "metadata": {
