--- a/Python Basics/Operators.ipynb
+++ b/Python Basics/Operators.ipynb
@@ -75,6 +75,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "eca49a03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arithmetic Operators\n",
+      "Addition 100\n",
+      "Subtraction 20\n",
+      "Multiplication 2400\n",
+      "division 1.5\n",
+      "Remainder 20\n",
+      "Exponent 133674945388437340678388459765760000000000000000000000000000000000000000\n",
+      "Floor division 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=60\n",
+    "d=40\n",
+    "print(\"Arithmetic Operators\")\n",
+    "print(\"Addition\", c+d)\n",
+    "print(\"Subtraction\", c-d)\n",
+    "print(\"Multiplication\",c*d)\n",
+    "print(\"division\",c/d)\n",
+    "print(\"Remainder\",c%d)\n",
+    "print(\"Exponent\",c**d)\n",
+    "print(\"Floor division\",c//d)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "06f81947",
    "metadata": {},
@@ -113,6 +147,92 @@
     "print(\"Greater than or equal operator\",x>=y)\n",
     "print(\"Greater than Operator\",x>y)\n",
     "print(\"Less than Operator\",x<y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6a23c828",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comparison Operator\n",
+      "Equals Operator False\n",
+      "Not Equals Operator True\n",
+      "Less than or equal operator False\n",
+      "Greater than or equal operator True\n",
+      "Greater than Operator True\n",
+      "Less than Operator False\n"
+     ]
+    }
+   ],
+   "source": [
+    "e=45\n",
+    "f=8\n",
+    "print(\"Comparison Operator\")\n",
+    "print(\"Equals Operator\",e==f)\n",
+    "print(\"Not Equals Operator\",e!=f)\n",
+    "print(\"Less than or equal operator\",e<=f)\n",
+    "print(\"Greater than or equal operator\",e>=f)\n",
+    "print(\"Greater than Operator\",e>f)\n",
+    "print(\"Less than Operator\",e<f)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63d118ed",
+   "metadata": {},
+   "source": [
+    "PYTHON ASSIGNMENT OPERATORS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f5a7bba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 10\n",
+      "x after x += 5: 15\n",
+      "x after x -= 3: 12\n",
+      "x after x *= 2: 24\n",
+      "x after x /= 4: 6.0\n",
+      "x after x %= 5: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Basic assignment\n",
+    "x = 10\n",
+    "print(\"x =\", x)  \n",
+    "\n",
+    "# Add and assign\n",
+    "x += 5  # Equivalent to: x = x + 5\n",
+    "print(\"x after x += 5:\", x)  \n",
+    "\n",
+    "# Subtract and assign\n",
+    "x -= 3  # Equivalent to: x = x - 3\n",
+    "print(\"x after x -= 3:\", x)  \n",
+    "\n",
+    "# Multiply and assign\n",
+    "x *= 2  # Equivalent to: x = x * 2\n",
+    "print(\"x after x *= 2:\", x)  \n",
+    "\n",
+    "# Divide and assign\n",
+    "x /= 4  # Equivalent to: x = x / 4\n",
+    "print(\"x after x /= 4:\", x)  \n",
+    "\n",
+    "# Modulus and assign\n",
+    "x %= 5  # Equivalent to: x = x % 5\n",
+    "print(\"x after x %= 5:\", x) "
    ]
   },
   {
@@ -207,6 +327,38 @@
     "print(\"e < 20 or f < 15:\", e < 20 or f < 15)    # False or True → True\n",
     "print(\"not (e == 27):\", not (e == 27))          # not True → False"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89a2157e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r > 20 and s < 15: False\n",
+      "r < 20 or s < 15: False\n",
+      "not (r == 27): True\n"
+     ]
+    }
+   ],
+   "source": [
+    "r=45\n",
+    "s=25\n",
+    "print(\"r > 20 and s < 15:\", r > 20 and s < 15)  # True and True → True\n",
+    "print(\"r < 20 or s < 15:\", r < 20 or s < 15)    # False or True → True\n",
+    "print(\"not (r == 27):\", not (s == 27))          # not True → False "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51dae2fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
