--- a/Python Basics/Operators.ipynb
+++ b/Python Basics/Operators.ipynb
@@ -353,9 +353,258 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bb1b61d9",
+   "metadata": {},
+   "source": [
+    "MEMBERSHIP OPERATORS\n",
+    "(in,not in)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "51dae2fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# WITH A LIST\n",
+    "fruits = ['apple', 'banana', 'cherry']\n",
+    "\n",
+    "print('banana' in fruits)      \n",
+    "print('grape' not in fruits)   \n",
+    "print('apple' in fruits)\n",
+    "print('ram' in fruits)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "605f1271",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# WITH A STRING\n",
+    "message = \"Hello, Im Ananya Singh Babu.\"\n",
+    "\n",
+    "print('Hello' in message)   \n",
+    "print('hi' not in message)  \n",
+    "print('Ananya' not in message)   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "07ef5031",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# WITH A TUPLE\n",
+    "numbers = (1, 2, 3, 4)\n",
+    "\n",
+    "print(3 in numbers)           \n",
+    "print(5 not in numbers) \n",
+    "print(5 in numbers)       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "07cd8e86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# WITH A SET\n",
+    "colors = {'red', 'green', 'blue'}\n",
+    "\n",
+    "print('green' in colors)       \n",
+    "print('yellow' not in colors) \n",
+    "print('black' in colors) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "58e97730",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# WITH A DICTIONARY\n",
+    "person = {'name': 'Alice', 'age': 30}\n",
+    "\n",
+    "print('name' in person)        \n",
+    "print('Alice' in person) \n",
+    "print('Alice' not in person) \n",
+    "print('age' not in person)     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80b9e8f7",
+   "metadata": {},
+   "source": [
+    "IDENTIFY OPERATORS( is, is not)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51dae2fb",
+   "id": "5665c36d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# WITH LIST\n",
+    "\n",
+    "x = [1, 2, 3]\n",
+    "y = [1, 2, 3]\n",
+    "\n",
+    "print(x == y)   # True — values are equal\n",
+    "print(x is y)   # False — different memory objects\n",
+    "print(x is not y)\n",
+    "print(x is y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "109da15b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "s= [1,2,3]\n",
+    "t= [3,8,9]\n",
+    "\n",
+    "print(s == t)\n",
+    "print(s is t)\n",
+    "print(s is not t)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c32b6e0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# with string\n",
+    "s1 = \"hello\"\n",
+    "s2 = \"hello\"\n",
+    "\n",
+    "print(s1 == s2)   # True — values match\n",
+    "print(s1 is s2)   # True — may be True due to string interning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e95d9e4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1 = \"rurhnn\"\n",
+    "a2 = \"ahhsnl\"\n",
+    "\n",
+    "print(a1 == a2)\n",
+    "print(a1 is a2)\n",
+    "print(a1 is not a2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a9d2b19",
    "metadata": {},
    "outputs": [],
    "source": []
