--- a/Data types.ipynb/String.ipynb
+++ b/Data types.ipynb/String.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "dc50e6af",
    "metadata": {},
    "outputs": [
@@ -284,10 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['welcom', 'to', 'bput', 'college']\n",
-      "['welcom', 'to', 'bput', 'college']\n",
-      "['welcom', 'to', 'bput', 'college']\n",
-      "['welcom', 'to', 'bput', 'college']\n"
+      "college bput to welcom "
      ]
     }
    ],
@@ -295,7 +292,7 @@
     "s=\"welcom to bput college\"\n",
     "l=s.split()\n",
     "for i in reversed(l):\n",
-    " print(l)"
+    " print(i,end=\" \")"
    ]
   },
   {
@@ -557,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "7942a83b",
    "metadata": {},
    "outputs": [
@@ -566,14 +563,16 @@
      "output_type": "stream",
      "text": [
       "a\n",
-      "anan\n"
+      "anan\n",
+      "y\n"
      ]
     }
    ],
    "source": [
     "a='ananya'\n",
     "print(a[:-5])\n",
-    "print(a[:4])"
+    "print(a[:4])\n",
+    "print(a[4])"
    ]
   },
   {
