--- a/Data types.ipynb/Dict.ipynb
+++ b/Data types.ipynb/Dict.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "cf9993bd",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Ananya', 'age': 21, 'course': 'Data Analytics', 1: 'ananya', 2: 'pratik', 3: 'anjali'}\n"
+      "{1: 'ananya', 2: 'pratik', 3: 'anjali'}\n"
      ]
     }
    ],
@@ -53,12 +53,12 @@
     " 2: \"pratik\",\n",
     " 3:\"anjali\"\n",
     "}\n",
-    "print(d)"
+    "print(dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "f8acffec",
    "metadata": {},
    "outputs": [
@@ -66,18 +66,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Ananya', 'age': 21, 'course': 'Data Analytics', 1: 'ananya', 2: 'pratik'}\n"
+      "{1: 'ananya', 2: 'pratik'}\n"
      ]
     }
    ],
    "source": [
-    "del d[3]\n",
-    "print(d)"
+    "del dict[3]\n",
+    "print(dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "50475594",
    "metadata": {},
    "outputs": [
@@ -85,14 +85,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Ananya', 'age': 21, 'course': 'Data Analytics', 1: 'ananya', 2: 'pratik', 3: 'ram'}\n"
+      "{1: 'ananya', 2: 'pratik', 3: 'ram'}\n"
      ]
     }
    ],
    "source": [
     "# update \n",
-    "d[3]=\"ram\"\n",
-    "print(d)"
+    "dict[3]=\"ram\"\n",
+    "print(dict)"
    ]
   },
   {
